# mlir_toy

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: AST.cpp.906D43854E582678.idx  AST.h.5284B2159A45F0EC.idx  Dialect.cpp.71B3E6D409A4685C.idx  Dialect.h.11AD875D2A05920D.idx  Lexer.h.EA60407E6D90546A.idx  LowerToAffineLoops.cpp.9145E7BCF87246A8.idx  LowerToLLVM.cpp.BACE337AAE423BF0.idx  MLIRGen.cpp.A02626FF02A386A6.idx  MLIRGen.h.573C58318BC7B878.idx  Parser.h.1A20911CAF9C74EC.idx  Passes.h.32D54DCED55EE41D.idx  ShapeInferenceInterface.h.FCE1E7BA27688488.idx  ShapeInferencePass.cpp.3437D499C80F95F0.idx  ToyCombine.cpp.83FAE115512450AD.idx  ch1_io.cpp.EC5DCBC77E657634.idx  main.cpp.8AB4D2DD49DC7C03.idx  toyc.cpp.2A4D1D60064FD137.idx
toy/: CMakeLists.txt  Ops.td  ToyCombine.td
toy/include/: AST.h  Dialect.h  Parser.h  Passes.h  ShapeInferenceInterface.h
toy/src/: AST.cpp  Dialect.cpp  LowerToAffineLoops.cpp  MLIRGen.cpp  ShapeInferencePass.cpp  ToyCombine.cpp  toyc.cpp
